fixies for slick sliders and align  programm

--- a/wp-content/themes/boycut/resources/assets/sass/common.pcss
+++ b/wp-content/themes/boycut/resources/assets/sass/common.pcss
@@ -21,6 +21,6 @@ html, body {
   }
 }
 
-:hover {
+/* :hover {
   transition: .3s;
-}
+} */
