--- a/wp-content/themes/boycut/resources/assets/sass/partials/button.pcss
+++ b/wp-content/themes/boycut/resources/assets/sass/partials/button.pcss
@@ -9,6 +9,7 @@
   text-transform: uppercase;
   color: white;
   background: none;
+   transition: $time;
   
   @mixin respond-to desk {
     padding: 11px 0 13px;
