--- a/wp-content/themes/boycut/resources/assets/sass/partials/social.pcss
+++ b/wp-content/themes/boycut/resources/assets/sass/partials/social.pcss
@@ -6,6 +6,7 @@
   font: var(--font-text);
   text-decoration: none;
   color: inherit;
+  transition: $time;
 
   & span:focus {
     outline: none;
