--- a/wp-content/themes/boycut/resources/assets/sass/tech/vars.pcss
+++ b/wp-content/themes/boycut/resources/assets/sass/tech/vars.pcss
@@ -12,7 +12,8 @@ body {
   --font-text: normal 15px/20px 'Circe', sans-serif;
   --font-subTitle: normal 24px/1.3 'FlounderPro', sans-serif;
   --font-button: normal 16px/20px 'FlounderPro', sans-serif;
-  --font-numbers: normal 19px/1.2 'FlounderPro', sans-serif;
+  --font-numbers: normal 19px/19px 'FlounderPro', sans-serif;
+  --font-textAlt: normal 19px/25px 'FlounderProItalic', sans-serif;
 
 }
 
@@ -23,8 +24,8 @@ body {
     --font-text: normal 21px/28px 'Circe', sans-serif;
     --font-subTitle: normal 30px/1.3 'FlounderPro', sans-serif;
     --font-button: normal 24px/28px 'FlounderPro', sans-serif;
-    --font-numbers: normal 22px/1.2 'FlounderPro', sans-serif;
-
+    --font-numbers: normal 22px/22px 'FlounderPro', sans-serif;
+    --font-textAlt: normal 30px/40px 'FlounderProItalic', sans-serif;
   }
 }
 
